--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Felicity Jones</title>
+    <title>Jenner Nicodemos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Felicity Jones" />
+    <meta name="description" content="Curriculum vitae Jenner Nicodemos" />
     <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="github.png">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Felicity <span>Jones</span></div></a>
+            <a href="index.html#home"><div class="site-title">Jenner <span>Nicodemos</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -65,7 +65,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Felicity Jones</div>
+          <div class="mobile-site-title">Jenner Nicodemos</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -88,27 +88,26 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/felicity.jpeg" alt="Felicity Jones">
+                        <img src="images/jenner.jpg" alt="Jenner Nicodemos">
                       </div>
                     </div>
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Felicity Jones</h1>
+                        <h1>Jenner Nicodemos</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle">Software Developer</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle">Front-end / Back-end</div>
                           </div>
                         </div>
                       </div>
 
                       <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/jennernicodemos/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/JennerNicodemos" target="_blank"><i class="fa fa-github"></i></a>
                       </div>
                     </div>
                   </div>
@@ -132,11 +131,11 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">29</span></li>
-                        <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
+                        <li><span class="title">Idade</span><span class="value">43</span></li>
+                        <li><span class="title">Nacionalidade</span><span class="value">brasileiro</span></li>
                         <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">felicity@geekuniversity.com.br</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
+                        <li><span class="title">E-mail</span><span class="value">jenner.nicodemos@gmail.com</span></li>
+                        <li><span class="title">Fone</span><span class="value">+5511 98214-7826</span></li>
                         <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
