Alteração de cor verde para vermelho

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <a class="pt-trigger" href="index.html#resume">Currículo</a>
               </li>
               <li>
-                <a class="pt-trigger" href="index.html#services">Serviços</a>
+                <!-- <a class="pt-trigger" href="index.html#services">Serviços</a>
               </li>
               <li>
                 <a class="pt-trigger" href="index.html#portfolio">Portfólio</a>
-              </li>
+              </li> -->
             </ul>
             <!-- /Main menu -->
           </div>
