Atualização do texto do perfil

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou a Felicity Jones. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
+                        <p>Olá! Eu sou o Jenner Nicodemos. Gosto de programar e de estudar as tecnologias. Aqui você encontrará algumas
                         informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
