--- a/index.html
+++ b/index.html
@@ -164,28 +164,29 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Tecnólogo em Processamento de Dados</h4>
+                            <span class="item-period">1998</span>
+                            <span class="item-small">Centro Universitário Sant'Anna</span>
+                            <p class="item-description">O objetivo do curso de Processamento de Dados é formar tecnólogos capazes de desenvolver e implantar sistemas computacionais de informação. Para isto, a grade curricular do curso combina disciplinas que abordam hardware, software e aspectos organizacionais, permitindo ao aluno alinhar o uso da tecnologia com as metas que determinada empresa deseja alcançar.</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">The Web Developer Bootcamp</h4>
+                            <span class="item-period">abril/2020</span>
+                            <span class="item-small">Udemy</span>
+                            <p class="item-description">Completamente remodelado - O único curso de que você precisa para aprender desenvolvimento web - HTML, CSS, JS, Node e muito mais!</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
+                            <h4 class="item-title">Git e Github Essencial para o Desenvolvedor</h4>
+                            <span class="item-period">outubro/2020</span>
                             <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <p class="item-description">Aprenda de forma rápida e objetiva a controlar seus projetos com Git criar um portfólio e seu currículo profissional
+                            </p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
@@ -200,37 +201,37 @@
 
                         <div class="timeline">
                           <!-- Experience 1 -->
-                          <div class="timeline-item">
+                          <!-- <div class="timeline-item">
                             <h4 class="item-title">Frontend-developer</h4>
                             <span class="item-period">Dec 2012 - Current</span>
                             <span class="item-small">Web Agency</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
+                          </div> -->
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
-                          <div class="timeline-item">
+                          <!-- <div class="timeline-item">
                             <h4 class="item-title">Web Designer</h4>
                             <span class="item-period">Dec 2011 - Nov 2012</span>
                             <span class="item-small">Apple Inc.</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
+                          </div> -->
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
-                          <div class="timeline-item">
+                          <!-- <div class="timeline-item">
                             <h4 class="item-title">Graphic Designer</h4>
                             <span class="item-period">Jan 2010 - Dec 2011</span>
                             <span class="item-small">Apple Inc.</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
+                          </div> -->
                           <!-- / Experience 3 -->
                         </div>
                       </div>
                     </div>
                   </div>
 
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
@@ -282,7 +283,7 @@
                         
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                   <!-- Download Resume Button -->
                   <div class="row">
