Alterações no arquivo index e CSS

--- a/index.html
+++ b/index.html
@@ -231,25 +231,40 @@
                     </div>
                   </div>
 
-                  <!-- <div class="row">
+                  <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                          <h3>Coding <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>Web Design</h4>                               
+                          <h4>NodeJS</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design</h4>
+                          <h4>MongoDB</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-2"></div>
                           </div>
 
-                          <h4>Print Design</h4>
+                          <h4>JavaScript</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-3"></div>
+                          </div> 
+                          
+                          <h4>HTML</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-3"></div>
+                          </div> 
+
+                          <h4>CSS</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-3"></div>
+                          </div>
+
+                          <h4>Bootstrap</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
                           </div> 
@@ -261,29 +276,24 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Coding <span>Skills</span></h3>
+                          <h3>Tools <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>HTML5</h4>                               
+                          <h4>Visual Studio Code</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-4"></div>
                           </div>
 
-                          <h4>CSS3/LESS/SASS</h4>
+                          <h4>Git & Github</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
                           </div>
-
-                          <h4>jQuery</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-6"></div>
-                          </div> 
                         </div>
                         
                       </div>
                     </div>
-                  </div> -->
+                  </div>
 
                   <!-- Download Resume Button -->
                   <div class="row">
