Atualização da página e do curriculum

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">43</span></li>
+                        <li><span class="title">Idade</span><span class="value">44</span></li>
                         <li><span class="title">Nacionalidade</span><span class="value">brasileiro</span></li>
                         <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
                         <li><span class="title">E-mail</span><span class="value">jenner.nicodemos@gmail.com</span></li>
@@ -184,11 +184,43 @@
                           <div class="timeline-item">
                             <h4 class="item-title">Git e Github Essencial para o Desenvolvedor</h4>
                             <span class="item-period">outubro/2020</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <span class="item-small">Udemy</span>
                             <p class="item-description">Aprenda de forma rápida e objetiva a controlar seus projetos com Git criar um portfólio e seu currículo profissional
                             </p>
                           </div>
                           <!-- / Education 3 -->
+
+                          <!-- Education 4 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Curso de Adobe XD 2020 Completo e Atualizado - UI/UX Design</h4>
+                            <span class="item-period">novembro/2020</span>
+                            <span class="item-small">Udemy</span>
+                            <p class="item-description">Neste curso completo você aprenderá a desenvolver um aplicativo profissional de Restaurante Delivery, construiremos mais de 50 telas (APP e WEB) e você aprenderá todos os conceitos necessários para ter sucesso como UI e UX designer.
+                            </p>
+                          </div>
+                          <!-- / Education 4 -->
+
+                          <!-- Education 5 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Curso Completo do Desenvolvedor NodeJS e MongoDB</h4>
+                            <span class="item-period">dezembro/2020</span>
+                            <span class="item-small">Udemy</span>
+                            <p class="item-description">Neste curso você aprenderá a criar aplicações com o NodeJS e o MongoDB, aprenderá a utilizar o framework Express em conjunto com o design pattern MVC, fará uso do gerenciador de pacotes NPM e do engine de views EJS, tudo para criar aplicações profissionais.
+                            </p>
+                            <p class="item-description">Aprenda a utilizar os seguintes módulos:</p> 
+                            <p class="item-description">
+                              <ul>
+                                <li>Consign: Para realizar autoload de módulos</li>
+                                <li>Body-parser: Para receber parâmetros de formulários trafegados em requests.</li>
+                                <li>Express-validator: Para validação de dados</li>
+                                <li>Express-session: Para criação de variáveis de sessão</li>
+                                <li>Crypto: Para criptografia de dados utilizando MD5</li>
+                                <li>Connect-Multiparty: Para upload de arquivos</li>
+                              </ul>
+                            </p>
+                          </div>
+                          <!-- / Education 5 -->
+
                         </div>
                       </div>
                     </div>
@@ -286,6 +318,11 @@
                           </div>
 
                           <h4>Git & Github</h4>
+                          <div class="skill-container">
+                            <div class="skill-percentage skill-5"></div>
+                          </div>
+
+                          <h4>Adobe XD</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-5"></div>
                           </div>
